--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,14 @@ body {
   color: rgb(44, 45, 51); /*Dark Night*/
 }
 
-h1, h2 {
+h1 {
   font-size: 32px;
   line-height: 40px;
   margin: 0 0 24px 0;
   font-weight: 900;
 }
 
-h3 {
+h2 {
   font-size: 24px;
   line-height: 32px;
   margin: 0 0 8px 0;
@@ -37,7 +37,7 @@ a:active {
 }
 
 @media (min-width: 768px) {
-  h1, h2 {
+  h1 {
     font-size: 36px;
     line-height: 48px;
     margin: 0 0 24px 0;
@@ -62,4 +62,65 @@ figure img {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+
+/*****************************
+Main 
+*****************************/
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.main-description {
+  max-width: 420px;
+  padding: 0 16px;
+  text-align: center;
+}
+
+.main-cta {
+  margin-top: 32px;
+}
+
+.main-cta a {
+  text-decoration: none;
+  padding: 4px 16px;
+  border-radius: 24px;
+  border: 1px solid rgba(0,0,0,0.6);
+  font-weight: 400;
+}
+
+.cta-viewMenu {
+  margin-left: 24px;
+}
+
+.restaurantInfo {
+  margin-top: 48px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.restaurantInfo > div {
+  margin: 16px;
+}
+
+.hours-section > div:not(:first-child) {
+  margin-top: 8px;
+}
+
+.hours-section > div {
+  display: flex;
+}
+
+.hours-subtitle {
+  margin-right: 8px;
+  font-weight: 700;
 }
