added section for new hours

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,13 @@ h2 {
   font-weight: 700;
 }
 
+h3 {
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 0 4px 0;
+  font-weight: 700;
+}
+
 p {
   margin: 0;
 }
@@ -80,6 +87,10 @@ Main
   height: 100%;
 }
 
+.main-content > h1 {
+  padding-top: 32px;
+}
+
 .main-description {
   max-width: 420px;
   padding: 0 16px;
@@ -105,14 +116,11 @@ Main
 }
 
 .restaurantInfo > div {
-  margin: 16px;
+  margin: 24px;
 }
 
 .hours-section > div:not(:first-child) {
   margin-top: 8px;
-}
-
-.hours-section > div {
   display: flex;
 }
 
@@ -120,3 +128,14 @@ Main
   margin-right: 8px;
   font-weight: 700;
 }
+
+.new-hours {
+  display: block !important;
+  margin-top: 16px !important;
+}
+
+.new-hours > div:not(:first-child) {
+  margin-top: 8px;
+  display: flex;
+}
+
